add readme doc with problem re-appear steps